# Qianyi_DP

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  setup.py
Qianyi_DP.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: geometry_interface.cpp  geometry_interface.h  main.cpp  main.cu  pattern_helper_interface.cpp  pattern_helper_interface.h  simulator_interface.cpp  simulator_interface.h
src/common/: atomic_utils.cuh  cuda_utils.h  device.h  geometric_algorithms.h  math_utils.h  py_utils.h  vec_math.h
src/gDel2D/: CMakeLists.txt  InputCreator.cpp  InputCreator.h  Main.cpp  README.txt  Visualizer.h
src/gDel2D/gDel2D/: CommonTypes.h
src/gDel2D/gDel2D/GPU/: CudaWrapper.h  GpuDelaunay.cu  GpuDelaunay.cu.orig  GpuDelaunay.cu.rej  MemoryManager.h  MemoryManager.h.bak  MemoryManager.h.my_modified  ThrustWrapper.cu  fix_devvector.txt  remove_copy_control.patch  test_no_copy.cpp
src/geometry/: CMakeLists.txt  lbvh_2d.cu  lbvh_2d.h  pattern_helper.cu  pattern_helper.h  sample_points.cu  sampler.h  triangulator.cpp  triangulator.h
src/geometry/mapbox/: README.md
src/graphics/: CMakeLists.txt  graphics.h  t1.cpp  t2.cpp  t3.cpp
src/graphics/assets/: frag.spv  shader.frag  shader.vert  vert.spv
src/sample/: CMakeLists.txt  sample_points.cu  sampler.h
src/simulation/: CMakeLists.txt  collision.cu  collision_Wu2021.cu  constraint.cuh  geometric_operator.cuh  picker.cu  pin.cu  sewing.cu  simulator.cu  simulator.h  solver_Chebyshev.cu  solver_Chebyshev.cuh  solver_PCG.cu  solver_PCG.cuh  solver_PNCG.cu  solver_PNCG.cuh  solver_base.cu  solver_base.cuh
src/simulation/contact/: collision.cuh  collision_Wu2021.cuh  collision_type.cuh  hash.cuh  lbvh.cu  lbvh.cuh
src/simulation/dynamics/: bending.cuh  planar.cuh
src/test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Project.sln  ProjectName.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
